--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost/blog_db
-spring.datasource.username=blog_user
-spring.datasource.password=codeup1
+spring.datasource.username=blogger1
+spring.datasource.password=myblog123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-file-upload-path=/var/www/emilio-alvarado.site/uploads
+
+file-upload-path=/Users/Emilios/IdeaProjects/spring-blog/target/classes/static/uploads
 spring.http.multipart.max-file-size=10MB
